--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aiohttp==3.5.4
 async-timeout==3.0.1
 attrs==19.1.0
 chardet==3.0.4
-discord.py
+discord.py==1.2.3
 fuzzywuzzy==0.17.0
 idna==2.8
 idna-ssl==1.1.0
