--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ motor~=2.3.0
 environs~=8.0.0
 aiohttp~=3.6.3
 cryptography
-discord-components>0.5.2.3
+discord-components
+pytz
+dateparser
+parsedatetime
