--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ motor~=2.3.0
 environs~=8.0.0
 aiohttp~=3.6.3
 cryptography
-discord-components
 pytz
 dateparser
 parsedatetime
 git+https://github.com/CrawlerEmporium/CrawlerUtilities.git
+git+https://github.com/Pycord-Development/pycord.git
