--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 requests~=2.20.0
 motor~=2.3.0
 environs~=8.0.0
-aiohttp~=3.6.3
+aiohttp>=3.8.0
 cryptography
 pytz
 dateparser
 parsedatetime
 git+https://github.com/CrawlerEmporium/CrawlerUtilities.git
-git+https://github.com/Pycord-Development/pycord.git
+py-cord~=2.0.0
