--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,27 +4,45 @@ on:
   push:
     branches:
       - main
-      - master 
+      - master
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+
+      - name: Build and push
         uses: docker/build-push-action@v4
         with:
           push: true
           tags: lorddusk/discordcrawler:latest
+
+      - name: Notify discord of completion
+        uses: distributhor/workflow-webhook
+        with:
+          url: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          json: '{
+  "content": "<@&1227942128131375186>",
+  "embeds": [
+    {
+      "title": "Docker build finished",
+      "description": "Docker container updated!\nYou can grab the update [here](https://hub.docker.com/repository/docker/lorddusk/discordcrawler/general).",
+      "url": "https://hub.docker.com/repository/docker/lorddusk/discordcrawler/general",
+      "color": 5832609
+    }
+  ],
+  "username": "CommunityCrawler",
+  "avatar_url": "https://cdn.discordapp.com/avatars/602774912595263490/3322f9c86f553dbb47f057b85a5e3d30.png",
+  "attachments": []
+}'
