--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,29 +10,34 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up QEMU
+      -
+        name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
-      - name: Set up Docker Buildx
+      -
+        name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to Docker Hub
+      -
+        name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
+      -
+        name: Build and push
         uses: docker/build-push-action@v4
         with:
           push: true
           tags: lorddusk/discordcrawler:latest
 
-      - name: Notify discord of completion
-        uses: distributhor/workflow-webhook
+      -
+        name: Notify discord of completion
+        uses: tsickert/discord-webhook@v5.3.0
         with:
-          url: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          json: '{
+          webhook_url: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          content: '{
   "content": "<@&1227942128131375186>",
   "embeds": [
     {
