Add debug logging to ban handler and update py-cord version
Introduced debug print statements in the ban handler (`BanCommand`) and case embed (`getCaseEmbed`) functions to trace execution flow. Updated py-cord dependency to version `2.7.0rc2` in `requirements.txt`.

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ dateparser
 parsedatetime
 faker
 git+https://github.com/CrawlerEmporium/CrawlerUtilities.git
-git+https://github.com/NeloBlivion/pycord.git@polls
+py-cord==2.7.0rc2
